# confluence-to-llm-wiki

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LLM-wiki-prompt-idea.md  README.md  fetch_confluence.py  pyproject.toml
prompts/: convert-to-wiki.md
