[project]
name = "confluence-to-llm-wiki"
version = "0.1.0"
description = "Fetch Confluence spec pages as markdown and convert to an LLM-maintained wiki"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "markdownify>=0.13",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
fetch-confluence = "fetch_confluence:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["fetch_confluence.py"]
